<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Vista previa de la cámara -->
    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Botón de linterna (Flash) -->
    <ImageButton
        android:id="@+id/btnFlash"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/circle_button_small"
        android:contentDescription="@string/torch"
        android:foreground="@drawable/ripple_circle"
        android:src="@drawable/ic_flash_off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Botón de galería -->
    <ImageButton
        android:id="@+id/btnGallery"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="18dp"
        android:background="@drawable/circle_button_small"
        android:contentDescription="@string/open_gallery"
        android:foreground="@drawable/ripple_circle"
        android:src="@drawable/ic_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- El TextView del temporizador -->
    <LinearLayout
        android:id="@+id/llTimerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/timer_bg"
        android:orientation="horizontal"
        android:padding="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnCapture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- El punto rojo -->
        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:src="@drawable/red_dot" />

        <!-- El texto del cronómetro -->
        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_init"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>


    <!-- Botón central para grabar video o capturar foto -->
    <ImageView
        android:id="@+id/btnCapture"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/circle_button_large"
        android:contentDescription="@string/make_video_photo"
        android:foreground="@drawable/ripple_circle"
        android:src="@drawable/ic_video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnToggleMode"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="18dp"
        android:background="@drawable/circle_button_small"
        android:contentDescription="@string/swap_video"
        android:foreground="@drawable/ripple_circle"
        android:src="@drawable/ic_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
